# winrt-notification

./: CHANGELOG.md  Cargo.toml  LICENSE.spdx  README.md
.changes/: README.md  add_progress_bar_support.md  buttons.md  changefile.md  config.json  msrv-1.62.md  msrv.md  new-error-type.md  on-activated.md  sound_str.md  update-windows-dependencies.md  windows-0-54.md  windows-0.58.md  windows-rs-0.56.md  windows-rs-version.md  windows-rs.0.57.md  windows-rs.md
.github/workflows/: ci.yml  covector-version-or-publish.yml
examples/: image.rs  progress.rs  reuse_arguments.rs  reuse_toast.rs  simple.rs  sound_str.rs  without_library.rs
src/: lib.rs  windows_check.rs
